Fix an error that relates to scrollbar

--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -10,5 +10,10 @@
             border: 1px solid green;
             cursor: pointer;
         }
+
+        .admin-main {
+            height: calc(100vh - 40px);
+            margin-bottom: 10px;
+        }
     }
 }
